# ethereum-etl

./: .gitignore  Dados_Importantes.txt  README.md  pyproject.toml  readme.md  requirements.txt
src/: extract.py  fetch.py  fetch0.py  transform.py
tests/: test_extract.py  test_transform.py
